Finalizando com os arquivos erb e as rotas

--- a/code/views/init.erb
+++ b/code/views/init.erb
@@ -15,14 +15,14 @@
 
     <a class="testdb" href="connect">Create DB</a>
 
-    <a class="testdb2" href="connect2">Create repos table</a>
+    <a class="testdb2" href="ctable">Create repos table</a>
 
     <a class="get" href="get_trend">
-        <img border="0" title="Load/Reload trendings on DB" alt="Get trends" src="/usr/src/app/img/button_get-trendings.png">
+        <img border="0" title="Load/Reload trendings on DB" alt="Get trends" src="/img/button_get-trendings.png">
     </a>
 
     <a class="list" href="list_trend">
-        <img border="0" title="List of loaded repos" alt="List trends" src="/usr/src/app/img/button_list-trendings.png">
+        <img border="0" title="List of loaded repos" alt="List trends" src="/img/button_list-trendings.png">
     </a>
 
 </div>
@@ -99,7 +99,7 @@
         background-position-x: -150px;
         background-position-y: -90px;
 
-        background-image: url('/usr/src/app/img/cc-wallpaper-desktop.png');
+        background-image: url('/img/cc-wallpaper-desktop.png');
         background-size: 600px 500px;
         height: 300px;
         width: 600px;
