--- a/code/views/get_details.erb
+++ b/code/views/get_details.erb
@@ -22,7 +22,7 @@
     <p class="texto1" style="top:240px;left:40px;">Repository info:</p>
 
     <div class="repoinfo">
-        <p class="texto1" style="top:5px;left: 20px;">Name: <%= my_hash["name"]%></p>
+        <p class="texto1" style="top:5px;left: 20px;">Nome: <%= my_hash["name"]%></p>
         <p class="texto1" style="top:40px;left: 20px;">Id: <%= my_hash['id']%></p>
         <p class="texto2" style="top: 15px;left: 680px;">Size: <%= my_hash['size']%> Bytes</p>
         <p class="texto2" style="top: 40px;left: 680px;">Created at: <%= my_hash['created_at']%></p>
@@ -110,7 +110,7 @@
         position: absolute;
         top:60px;
         left:20px;
-        
+
     }
     .repoinfo{
         width:1000px;
