--- a/code/views/get_details.erb
+++ b/code/views/get_details.erb
@@ -25,7 +25,7 @@
         <p class="texto1" style="top:5px;left: 20px;">Nome: <%= my_hash["name"]%></p>
         <p class="texto1" style="top:40px;left: 20px;">Id: <%= my_hash['id']%></p>
         <p class="texto2" style="top: 15px;left: 680px;">Size: <%= my_hash['size']%> Bytes</p>
-        <p class="texto2" style="top: 40px;left: 680px;">Created at: <%= my_hash['created_at']%></p>
+        <p class="texto2" style="top: 40px;left: 680px;">Criated at: <%= my_hash['created_at']%></p>
         <p class="texto2" style="top: 65px;left: 680px;">Updated at: <%= my_hash['updated_at']%></p>
         <p class="texto2" style="top: 90px;left: 680px;">Pushed at: <%= my_hash['pushed_at']%></p>
 
